# cot-fastpath

./: .pre-commit-config.yaml  LICENSE  README.md  compare_benchmarks.py  example.py  pyproject.toml  setup.py  tox.ini
.benchmarks/Linux-CPython-3.12-64bit/: 0001_comparison.json  0002_c-implementation.json  0003_full-c.json
src/fastpath/: __init__.py  _allocator.py  _allocator_c.c  _path.py  _path_c.c  allocator.c  fastpath.h  module.c  path.c
testing/: conftest.py  test_allocator.py  test_compat.py  test_performance.py
